Added basic CRUD repository capabilities. Cleaned up code.